# macro_foundry

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  alembic.ini  docker-compose.yml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_latest_observations_view.py  0003_request_level_ingestion_feeds.py  0003_series_hierarchy_edges.py  0004_request_level_ingestion_feeds.py  0005_ingestion_run_log_members.py  0006_observation_member_provenance.py  0007_langgraph_checkpoint_schema.py  0008_governance_enum_widenings.py  0009_credential_gap_provider_access.py  0009_enum_gap_governance_values.py  (+15 more)
docs/: CONTEXT.md  architecture-review-20260611.html  architecture.md  build_plan.md  code_standards.md  environments.md  fred_bootstrap_plan.md  onboarding_visual_guide.html  progress_tracker.md  project_overview.md  series_catalog_governance.md  series_onboarding_workflow.md  series_onboarding_workflow_visualization.html
scripts/: embeddings_sanity.py
tests/: conftest.py  test_admin.py  test_admin_auth.py  test_config.py  test_constraints.py  test_crud_generator.py  test_debug_bootstrap.py  test_docs_terminology.sh  test_e2e.py  test_fred_bootstrap.py  test_issue_12_architecture_docs.py  test_issue_15_onboarding_governance_docs.py  test_migrations.py  test_observations_routes.py  test_schema_v8_canonical.sh  test_schemas.py  test_seed.py  test_series_routes.py
(+301 files in other folders)
