[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "macro-foundry"
version = "0.1.0"
description = "Macroeconomic database system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2",
    "pydantic-settings>=2",
    "alembic>=1.13",
    "sqladmin>=0.20",
    "typer>=0.12",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
]

[project.scripts]
macrodb = "macro_foundry.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/macro_foundry"]

[tool.pytest.ini_options]
markers = [
    "no_db: marks tests that do not require the migrated macrodb_test harness",
]
